modified css fixed nav-bar in mobile view

--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -365,7 +365,7 @@ footer li {
         display: none;
     }
 
-    .mobile-nav {
+    .nav-mobile {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         align-items: center;
